some alignment fixes

--- a/suhasini/css/style.css
+++ b/suhasini/css/style.css
@@ -533,7 +533,7 @@ section#frase i{
 	font-weight:bold;
 }
 
-section#footer {
+.font-white {
 	color: #fff;
 }
 
